deployment/prod/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: pep-prod
  labels:
    app: frontend
    environment: prod
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
